Fixed select on mobile

--- a/projects/srm/src/app/search-results-branches-list/search-results-branches-list.component.less
+++ b/projects/srm/src/app/search-results-branches-list/search-results-branches-list.component.less
@@ -23,8 +23,9 @@
 .arrow-top-right-img{
   height: 100%;
 }
-.gray-background{
-  background-color: @color-gray-7;
+.branch-list-card{
+  background: @color-white;
+  border-bottom: 1px solid @color-gray-5;
 }
 .content-div{
   width: 100%;
@@ -41,14 +42,13 @@
   font-family: 'RAG Sans', 'Arial', sans-serif;
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  border-radius: 7%;
   overflow-y: auto;
-  .header-div-search-results-branches-list{
+  .header-div-search-results-branches-list {
     display: flex;
     justify-content: space-between;
-    background-color: @color-yellow-4;
-    border-bottom: 3px solid @color-gray-5;
+    background-color: @color-white;
+    box-shadow: 5px 2px 2px #BBBBBB;
+    margin-bottom: 5px;
     flex-direction: row;
     align-items: center;
     padding: 0 10px;
